[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
futures-timer = "3.0.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.crossterm]
version = "0.26.1"
features = ["event-stream"]
