[package]
name = "tetris"
version = "0.2.2"
edition = "2021"

[dependencies]
futures = "0.3.28"
futures-timer = "3.0.2"
home = "0.5.9"
lazy_static = "1.5.0"
num-derive = "0.4.2"
num-traits = "0.2.15"
rand = "0.8.5"
rust-ini = "0.21.0"
strum = "0.26.2"
strum_macros = "0.26.4"
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4.41"

[dependencies.crossterm]
version = "0.27.0"
features = ["event-stream"]

